--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-zinc-100 dark:bg-base-300 min-h-screen">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
