--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-gray-900 h-full">
+	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-slate-950">
 		<div class="flex flex-col h-full">%sveltekit.body%</div>
 	</body>
 </html>
